--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,12 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation 'androidx.navigation:navigation-fragment:2.6.0'
-    implementation 'androidx.navigation:navigation-ui:2.6.0'
+    implementation 'androidx.navigation:navigation-ui:2.6.0' //tag
+    implementation 'com.google.android.material:material:1.9.0' //added
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0")) //added
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
